--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "http-status-codes": "^2.2.0",
+    "moment": "^2.29.4",
+    "mongoose": "^7.3.1",
     "next": "13.4.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "recharts": "^2.7.2",
+    "styled-components": "^6.0.1",
+    "validator": "^13.9.0",
+    "xss-clean": "^0.1.4"
   }
 }
